--- a/weather.html
+++ b/weather.html
@@ -1,1 +1,41 @@
-one
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Check Weather</title>
+    <link rel="stylesheet" href="/weatherApp/weather.css">
+</head>
+<body>
+    <div class="container">
+        <div class="search">
+            <input type="text" placeholder="enter city name" class="citySearch">
+            <button><img src="/weatherApp/images/search.png" class="button"></button>
+                <p id="error">Invalid City Name</p>
+        </div>
+        <div class="weather">
+            <img src="/weatherApp/images/clear.png" class="icon">
+            <h1 class="temp"></h1>
+            <h2 class="city"></h2>
+        <div class="details">
+            <div class="col">
+                <img src="/weatherApp/images/humidity.png" alt="">
+                <div>
+                    <p class="humidity"></p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="/weatherApp/images/wind.png" alt="">
+                <div>
+                    <p class="wind"></p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    <script src="/weatherApp/weather.js"></script>
+   
+</body>
+</html>
